--- a/nginx.conf
+++ b/nginx.conf
@@ -7,69 +7,25 @@ events {
 }
 
 rtmp {
-    server {
-        listen 1935;
-        chunk_size 4000;
+  server {
+    listen 1935;
+    ping 30s;
+    notify_method get;
 
-        application stream {
-            live on;
-
-            exec ffmpeg -i rtmp://localhost:1935/stream/$name
-              -c:a libfdk_aac -b:a 128k -c:v libx264 -b:v 2500k -f flv -g 30 -r 30 -s 1280x720 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_720p2628kbs
-              -c:a libfdk_aac -b:a 128k -c:v libx264 -b:v 1000k -f flv -g 30 -r 30 -s 854x480 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_480p1128kbs
-              -c:a libfdk_aac -b:a 128k -c:v libx264 -b:v 750k -f flv -g 30 -r 30 -s 640x360 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_360p878kbs
-              -c:a libfdk_aac -b:a 128k -c:v libx264 -b:v 400k -f flv -g 30 -r 30 -s 426x240 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_240p528kbs
-              -c:a libfdk_aac -b:a 64k -c:v libx264 -b:v 200k -f flv -g 15 -r 15 -s 426x240 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_240p264kbs;
-        }
-
-        application hls {
-            live on;
-            hls on;
-            hls_fragment_naming system;
-            hls_fragment 5s;
-            hls_path /opt/data/hls;
-            hls_nested on;
-
-            hls_variant _720p2628kbs BANDWIDTH=2628000,RESOLUTION=1280x720;
-            hls_variant _480p1128kbs BANDWIDTH=1128000,RESOLUTION=854x480;
-            hls_variant _360p878kbs BANDWIDTH=878000,RESOLUTION=640x360;
-            hls_variant _240p528kbs BANDWIDTH=528000,RESOLUTION=426x240;
-            hls_variant _240p264kbs BANDWIDTH=264000,RESOLUTION=426x240;
-        }
+    application stream {
+        live on;
+        exec_pull ffmpeg -strict experimental -fflags nobuffer -flags low_delay -rtsp_transport tcp -r 30 -i 'rtsp://$name/cam/realmonitor?channel=1&subtype=0' -c copy  -shortest -probesize 32 -f flv rtmp://localhost/$app/$name;
     }
+  }
 }
 
 http {
     server {
         listen 80;
 
-        location /hls {
-            types {
-                application/vnd.apple.mpegurl m3u8;
-                video/mp2t ts;
-            }
-            root /opt/data;
-            add_header Cache-Control no-cache;
-            add_header Access-Control-Allow-Origin *;
-        }
-
-        location /live {
-          alias /opt/data/hls;
-          types {
-              application/vnd.apple.mpegurl m3u8;
-              video/mp2t ts;
-          }
-          add_header Cache-Control no-cache;
-          add_header Access-Control-Allow-Origin *;
-        }
-
         location /stat {
             rtmp_stat all;
             rtmp_stat_stylesheet static/stat.xsl;
-        }
-
-        location /static {
-            alias /www/static;
         }
 
         location = /crossdomain.xml {
