--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,10 @@
 daemon off;
 
 error_log logs/error.log debug;
+worker_processes 1;
 
 events {
-    worker_connections 1024;
+  worker_connections 1024;
 }
 
 rtmp {
@@ -12,26 +13,32 @@ rtmp {
     ping 30s;
     notify_method get;
 
-    application stream {
-        live on;
-        exec_pull ffmpeg -strict experimental -fflags nobuffer -flags low_delay -rtsp_transport tcp -r 30 -i 'rtsp://$name/cam/realmonitor?channel=1&subtype=0' -c copy  -shortest -probesize 32 -f flv rtmp://localhost/$app/$name;
+    application pull {
+      live on;
+      exec_pull /bin/bash -c "echo $name | base64 -D | xargs -I '{}' /usr/local/bin/ffmpeg '{}' rtmp://localhost/$app/$name" 2>>/usr/local/var/log/ffmpeg-$app-$name.log;
+    }
+
+    application push {
+      live on;
+      record off;
+      exec_push /bin/bash -c "echo $name | base64 -D | xargs /usr/local/bin/ffmpeg -i rtmp://localhost/$app/$name" 2>>/usr/local/var/log/ffmpeg-$app-$name.log;
     }
   }
 }
 
 http {
-    server {
-        listen 80;
+  server {
+    listen 80;
 
-        location /stat {
-            rtmp_stat all;
-            rtmp_stat_stylesheet static/stat.xsl;
-        }
-
-        location = /crossdomain.xml {
-            root /www/static;
-            default_type text/xml;
-            expires 24h;
-        }
+    location /stat {
+      rtmp_stat all;
+      rtmp_stat_stylesheet static/stat.xsl;
     }
+
+    location = /crossdomain.xml {
+      root /www/static;
+      default_type text/xml;
+      expires 24h;
+    }
+  }
 }
