Revert to default Dockerfile

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,41 +1,24 @@
-daemon off;
+user  nginx;
+worker_processes  1;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
 events {
-  worker_connections 1024;
-}
-
-rtmp {
-  server {
-    listen 1935;
-    ping 30s;
-    notify_method get;
-
-    application pull {
-      live on;
-      exec_pull /bin/bash -c "echo $name | base64 -D | xargs -I '{}' /usr/local/bin/ffmpeg '{}' rtmp://localhost/$app/$name" 2>>/usr/local/var/log/ffmpeg-$app-$name.log;
-    }
-
-    application push {
-      live on;
-      record off;
-      exec_push /bin/bash -c "echo $name | base64 -D | xargs /usr/local/bin/ffmpeg -i rtmp://localhost/$app/$name" 2>>/usr/local/var/log/ffmpeg-$app-$name.log;
-    }
-  }
+    worker_connections  1024;
 }
 
 http {
-  server {
-    listen 8080;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    location /stat {
-      rtmp_stat all;
-      rtmp_stat_stylesheet static/stat.xsl;
-    }
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    location = /crossdomain.xml {
-      root /www/static;
-      default_type text/xml;
-      expires 24h;
-    }
-  }
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    keepalive_timeout  65;
+    include /etc/nginx/conf.d/*.conf;
 }
