--- a/nginx.vh.default.conf
+++ b/nginx.vh.default.conf
@@ -1,4 +1,17 @@
-server {
+http {
+  include       /etc/nginx/mime.types;
+  default_type  application/octet-stream;
+
+  log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+
+  access_log  /var/log/nginx/access.log  main;
+
+  sendfile        on;
+  keepalive_timeout  65;
+
+  server {
     listen       80;
     server_name  localhost;
 
@@ -6,8 +19,8 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+      root   /usr/share/nginx/html;
+      index  index.html index.htm;
     }
 
     #error_page  404              /404.html;
@@ -16,29 +29,41 @@ server {
     #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+      root   /usr/share/nginx/html;
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
     #
     #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
+    #  proxy_pass   http://127.0.0.1;
     #}
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
+    #  root           html;
+    #  fastcgi_pass   127.0.0.1:9000;
+    #  fastcgi_index  index.php;
+    #  fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+    #  include        fastcgi_params;
     #}
 
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
     #
     #location ~ /\.ht {
-    #    deny  all;
+    #  deny  all;
     #}
+
+    location /stat {
+      rtmp_stat all;
+      rtmp_stat_stylesheet static/stat.xsl;
+    }
+
+    location = /crossdomain.xml {
+      root /www/static;
+      default_type text/xml;
+      expires 24h;
+    }
+  }
 }
