--- a/nginx.rtmp.conf
+++ b/nginx.rtmp.conf
@@ -6,7 +6,7 @@ rtmp {
 
     application pull {
       live on;
-      exec_pull /usr/bin/ffmpeg -strict experimental -fflags nobuffer -flags low_delay -rtsp_transport tcp -r 30 -i 'rtsp://$name/cam/realmonitor?channel=1&subtype=0' -c copy  -shortest -probesize 32 -f flv rtmp://localhost/$app/$name 2>>/var/log/nginx/rtmp.log;
+      exec_pull /usr/bin/ffmpeg -strict experimental -fflags nobuffer -flags low_delay -rtsp_transport tcp -r 30 -i 'rtsp://$name/cam/realmonitor?channel=1&subtype=0' -c copy  -shortest -probesize 32 -f flv rtmp://localhost/$app/$name;
     }
 
     application push {
