Forward boot problems to the error log

--- a/nginx.rtmp.conf
+++ b/nginx.rtmp.conf
@@ -4,15 +4,9 @@ rtmp {
     ping 30s;
     notify_method get;
 
-    application pull {
+    application stream {
       live on;
-      exec_pull /usr/bin/ffmpeg -strict experimental -fflags nobuffer -flags low_delay -rtsp_transport tcp -r 30 -i 'rtsp://$name/cam/realmonitor?channel=1&subtype=0' -c copy  -shortest -probesize 32 -f flv rtmp://localhost/$app/$name;
-    }
-
-    application push {
-      live on;
-      record off;
-      exec_push /bin/bash -c "echo $name | base64 -D | xargs /usr/local/ffmpeg -i rtmp://localhost/$app/$name" 2>>/var/log/nginx/rtmp.log;
+      exec_pull /usr/bin/ffmpeg -strict experimental -fflags nobuffer -flags low_delay -rtsp_transport tcp -r 30 -i 'rtsp://$name/cam/realmonitor?channel=1&subtype=0' -c copy  -shortest -probesize 32 -f flv rtmp://localhost/$app/$name 2>&1 >>/var/log/nginx/error.log;
     }
   }
 }
