Add wrapper scripts for RTSP and HTTP pulls

--- a/nginx.rtmp.conf
+++ b/nginx.rtmp.conf
@@ -6,7 +6,26 @@ rtmp {
 
     application stream {
       live on;
-      exec_pull /usr/bin/ffmpeg -strict experimental -fflags nobuffer -flags low_delay -rtsp_transport tcp -r 30 -i 'rtsp://$name/cam/realmonitor?channel=1&subtype=0' -c copy  -shortest -probesize 32 -f flv rtmp://localhost/$app/$name 2>&1 >>/var/log/nginx/error.log;
+      exec_kill_signal term;
+      exec_pull /usr/local/bin/stream-pull $name 2>>/var/log/nginx/access.log;
+    }
+
+    application oldstream {
+      live on;
+      exec_kill_signal term;
+      exec_pull /usr/bin/ffmpeg -strict experimental -fflags nobuffer -flags low_delay -rtsp_transport tcp -r 30 -i 'rtsp://$name/cam/realmonitor?channel=1&subtype=0' -c copy  -shortest -probesize 32 -f flv rtmp://localhost/$app/$name;
+    }
+
+    application rtsp {
+      live on;
+      exec_kill_signal term;
+      exec_pull /usr/local/bin/rtsp-pull $name 2>>/var/log/nginx/access.log;
+    }
+
+    application http {
+      live on;
+      exec_kill_signal term;
+      exec_pull /usr/local/bin/http-pull $name 2>>/var/log/nginx/access.log;
     }
   }
 }
