Split 30fps and 25fps framerate pulls

--- a/nginx.rtmp.conf
+++ b/nginx.rtmp.conf
@@ -5,10 +5,16 @@ rtmp {
     notify_method get;
     buflen 0s;
 
-    application rtsp {
+    application rtsp-30 {
       live on;
       exec_kill_signal term;
-      exec_pull /usr/local/bin/rtsp-pull $name 2>>/var/log/nginx/access.log;
+      exec_pull /usr/local/bin/rtsp-pull $name 30 2>>/var/log/nginx/access.log;
+    }
+
+    application rtsp-25 {
+      live on;
+      exec_kill_signal term;
+      exec_pull /usr/local/bin/rtsp-pull $name 25 2>>/var/log/nginx/access.log;
     }
 
     application http {
