--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,11 @@
-user  nginx;
+user root;
 worker_processes  1;
 
-error_log   /var/log/nginx/error.log warn;
-pid         /var/run/nginx.pid;
+pid /var/run/nginx.pid;
+error_log /var/log/nginx/error.log notice;
 
 events {
-    worker_connections  1024;
+  worker_connections  1024;
 }
 
 include /etc/nginx/conf.d/*.conf;
