--- a/nginx.rtmp.conf
+++ b/nginx.rtmp.conf
@@ -1,4 +1,6 @@
 rtmp {
+  access_log /proc/1/fd/1;
+
   server {
     listen 1935;
     ping 30s;
@@ -8,19 +10,19 @@ rtmp {
     application rtsp-30 {
       live on;
       exec_kill_signal term;
-      exec_pull /usr/local/bin/rtsp-pull $name 30 2>>/var/log/nginx/access.log;
+      exec_pull /usr/local/bin/rtsp-pull $name 30 2>>/proc/1/fd/1;
     }
 
     application rtsp-25 {
       live on;
       exec_kill_signal term;
-      exec_pull /usr/local/bin/rtsp-pull $name 25 2>>/var/log/nginx/access.log;
+      exec_pull /usr/local/bin/rtsp-pull $name 25 2>>/proc/1/fd/1;
     }
 
     application http {
       live on;
       exec_kill_signal term;
-      exec_pull /usr/local/bin/http-pull $name 2>>/var/log/nginx/access.log;
+      exec_pull /usr/local/bin/http-pull $name 2>>/proc/1/fd/1;
     }
   }
 }
