--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,59 @@
 user root;
-worker_processes  1;
-
-pid /var/run/nginx.pid;
-error_log /var/log/nginx/error.log notice;
+daemon off;
+worker_processes 1;
+error_log /proc/1/fd/1 notice;
 
 events {
-  worker_connections  1024;
+  worker_connections 1024;
 }
 
-include /etc/nginx/conf.d/*.conf;
+rtmp {
+  access_log /proc/1/fd/1;
+
+  server {
+    listen 1935;
+    chunk_size 4000;
+
+    application rtsp-30 {
+      live on;
+      exec_kill_signal term;
+      exec_pull /usr/local/bin/rtsp-pull $name 30 2>>/proc/1/fd/1;
+    }
+
+    application rtsp-25 {
+      live on;
+      exec_kill_signal term;
+      exec_pull /usr/local/bin/rtsp-pull $name 25 2>>/proc/1/fd/1;
+    }
+
+    application http {
+      live on;
+      exec_kill_signal term;
+      exec_pull /usr/local/bin/http-pull $name 2>>/proc/1/fd/1;
+    }
+  }
+}
+
+http {
+  default_type application/octet-stream;
+  access_log /proc/1/fd/1;
+
+  sendfile        on;
+  keepalive_timeout  65;
+
+  server {
+    listen       80;
+    server_name  localhost;
+
+    location /stat {
+      rtmp_stat all;
+      rtmp_stat_stylesheet static/stat.xsl;
+    }
+
+    location = /crossdomain.xml {
+      root /www/static;
+      default_type text/xml;
+      expires 24h;
+    }
+  }
+}
