Update ffmpeg flags

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,12 +16,14 @@ rtmp {
 
     application rtsp-30 {
       live on;
+      meta copy;
       exec_kill_signal term;
       exec_pull /usr/local/bin/rtsp-pull $name 30 2>>/proc/1/fd/1;
     }
 
     application rtsp-25 {
       live on;
+      meta copy;
       exec_kill_signal term;
       exec_pull /usr/local/bin/rtsp-pull $name 25 2>>/proc/1/fd/1;
     }
