Add ffmpeg passthrough route

--- a/nginx.conf
+++ b/nginx.conf
@@ -33,29 +33,32 @@ rtmp {
       exec_kill_signal term;
       exec_pull /usr/local/bin/http-pull $name 2>>/proc/1/fd/1;
     }
+
+    application ffmpeg {
+      live on;
+      meta copy;
+      exec_kill_signal term;
+      exec_pull /usr/local/bin/ffmpeg-pull $name 2>>/proc/1/fd/1;
+    }
   }
 }
 
 http {
+  include mime.types;
   default_type application/octet-stream;
   access_log /proc/1/fd/1;
 
-  sendfile        on;
-  keepalive_timeout  65;
+  gzip on;
+  sendfile on;
+  keepalive_timeout 65;
 
   server {
     listen       80;
     server_name  localhost;
 
-    location /stat {
-      rtmp_stat all;
-      rtmp_stat_stylesheet static/stat.xsl;
-    }
-
-    location = /crossdomain.xml {
-      root /www/static;
-      default_type text/xml;
-      expires 24h;
+    location / {
+      resolver 8.8.8.8;
+      proxy_pass $scheme://$http_host$request_uri;
     }
   }
 }
