Clean up nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,35 +11,15 @@ rtmp {
   access_log /proc/1/fd/1;
 
   server {
+    live on;
     listen 1935;
-    chunk_size 4000;
+    exec_kill_signal term;
+    meta copy;
 
-    application rtsp-30 {
-      live on;
-      meta copy;
-      exec_kill_signal term;
-      exec_pull /usr/local/bin/rtsp-pull $name 30 2>>/proc/1/fd/1;
-    }
-
-    application rtsp-25 {
-      live on;
-      meta copy;
-      exec_kill_signal term;
-      exec_pull /usr/local/bin/rtsp-pull $name 25 2>>/proc/1/fd/1;
-    }
-
-    application http {
-      live on;
-      exec_kill_signal term;
-      exec_pull /usr/local/bin/http-pull $name 2>>/proc/1/fd/1;
-    }
-
-    application ffmpeg {
-      live on;
-      meta copy;
-      exec_kill_signal term;
-      exec_pull /usr/local/bin/ffmpeg-pull $name 2>>/proc/1/fd/1;
-    }
+    application rtsp-30 { exec_pull /usr/local/bin/rtsp-pull $name 30 2>>/proc/1/fd/1; }
+    application rtsp-25 { exec_pull /usr/local/bin/rtsp-pull $name 25 2>>/proc/1/fd/1; }
+    application http { exec_pull /usr/local/bin/http-pull $name 2>>/proc/1/fd/1; }
+    application ffmpeg { exec_pull /usr/local/bin/ffmpeg-pull $name 2>>/proc/1/fd/1; }
   }
 }
 
